@@ -8,6 +8,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 = Code =
 * Added `widgets` to the HTML5 theme supported items
 * Change `OpusPrimusStructures` to a singleton style class
+* Moved the `support_comment` method back into the `OpusPrimusStructures` class
 
 = CSS =
 * Adjusted CSS to not reference `li` elements in default widget styles
